fix runner commit head logic

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,10 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "VITE_ENABLE_DEBUG=false vite build",
+    "build": "cross-env VITE_ENABLE_DEBUG=false vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "cross-env": "^7.0.3",
     "@xterm/xterm": "^5.5.0",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/addon-web-links": "^0.11.0"
